repositories {
//    jcenter()
//    mavenLocal()
    mavenCentral()
}

buildscript {
    repositories {
//        mavenLocal()
        mavenCentral()
//        jcenter()
    }
    dependencies {
        classpath("net.serenity-bdd:serenity-gradle-plugin:2.3.2")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'net.serenity-bdd.aggregator'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {
    implementation 'net.serenity-bdd:serenity-core:2.3.2'
    implementation 'net.serenity-bdd:serenity-junit:2.3.2'
    testImplementation('junit:junit:4.12')
}
gradle.startParameter.continueOnFailure = true

test {
    useJUnit() // or useJUnitPlatform() if you're using JUnit 5

    jvmArgs += [
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
    ]
}